Corrected pierre.tex

--- a/docs/report/pierre.tex
+++ b/docs/report/pierre.tex
@@ -6,81 +6,81 @@
 \chapter{System prototype report}
 
 \section{Abstract}
-This project report will introduce you the group's third year major group project. It will present all parts of the project, from the beginning with the research of an idea to the final product through all steps. The final result is a computer's open source software called “QTypingTest“ usable on any platform (Window, Linux or Mac OS). The software is composed of different parts where users can learn how type on a keyboard, improve what they did learn and use all this in a “competition” part. Users has access to statistics to show the evolution of their learning. The software has been developed using Qt, a cross-platform application software framework which allow easily to develop software that can be run on various platform. 
+This project report will introduce you the group's third year major group project. It will present all parts of the project, from the beginning with the research of an idea to the final product through all steps. The final result is a computer's open source software called “QTypingTest“ usable on any platform (Window, Linux or Mac OS). The software is composed of different parts where users can learn how to type on a keyboard, improve what they learned and use all this in a “competition” part. Users have access to statistics to show the evolution of their learning. The software has been developed using Qt, a cross-platform application software framework which allow to easily develop software that can be run on various platforms. 
 
 \section{Introduction}
-The application developed is a learning and testing software which gives users the opportunity to learn how to type well on keyboard, to practice and to improve. When the software runs, the user is on the home page where he can create a new account and select or delete an existing one. Then, when an account is selected or created, the user has access to all different part of the software. Those part are “Home” which send the user back to the home page, “Learn” which send the user to the section where he can learn how type and see which letters are learned and which one need to be, “Practice” when the user has access to four different practice exercises, “Statistics” where he can see statistics about his different practice and “Game” where he can find an interactive keyboard. 
+The application developed is a learning and testing software which gives users the opportunity to learn how to type well on a keyboard, to practice and to improve. When the software runs, the user is on the home page where he can create a new account and select or delete an existing one. Then, when an account is selected or created, the user has access to all different part of the software. Those part are “Home” which send the user back to the home page, “Learn” which send the user to the section where he can learn how type and see which letters are learned and which one need to be, “Practice” when the user has access to four different practice exercises, “Statistics” where he can see statistics about his different practice and “Game” where he can find an interactive keyboard. 
 
 \section{Brief walkthrough}
 Basically, it is very simple to run the application. Indeed, the user just need the executable (.exe) on his computer. When the software is running, the user can see the menu where he can select an existing user or create a new one and then navigate on the software. 
 
 \section{Technology}
 \begin{itemize}
-\item[•] C++ is the coding language for this software development.
-\item[•] Qt (pronounced as ‘Cute’ or ‘Q-T’) is a framework use to develop the software. It has been choose because it is very suitable with C++ and to develop cross-platform software. The user does not need Qt on is computer to run the application. 
-\item[•] Any software development platform (as NetBeans, Eclipse …) could we used to code as long it support Qt software. Qt company provides is own IDE, Qt Creator, which is very adapted because it include some tutorials and the full library documentation of the software. 
+    \item C++ is the language for this software.
+    \item Qt (pronounced ‘Cute’ or ‘Q-T’) is a framework use to develop the software. It has been choose because it is very suitable with C++ and to develop cross-platform software. The user does not need Qt on is computer to run the application. 
+    \item Any software development platform (such as NetBeans or Eclipse …) could be used to code as long it supports Qt software. Qt company provides its own IDE, Qt Creator, which is very adapted because it include some tutorials and the full library documentation of the framework. 
 \end{itemize}
 
 \section{Difficulties Faced}
-Difficulties faced was different related to each member of the group. The principal one was at the beginning for both of us and was to understand how was working Qt because it was new. For Pierre, he also has some difficulties with C++ because he was less familiar with this computer language than Azarias. 
+The challenges faced were different related to each member of the group. The principal one was at the beginning for both of the group member and was to understand how Qt was working because it was new for them. Pierre, also has some difficulties with C++ because he was less familiar with this language than Azarias. 
 
 \section{Current Functionality}
 \begin{itemize}
-\item[•] Can create a new user, use or delete an old one.
-\item[•] Users can use the "Learn" section and see the evolution of his learning.
-\item[•] Practice against time works.
-\item[•] Normal practice works.
-\item[•] Improve practice works.
-\item[•] Text practice works.
-\item[•] Users can see their own statistics.
-\item[•] Interactive keyboard.
+\item Can create a new user, use or delete an old one.
+\item Users can use the "Learn" section and see the evolution of his learning.
+\item Practice against time works.
+\item Normal practice works.
+\item Improve practice works.
+\item Text practice works.
+\item Users can see their own statistics.
+\item Interactive keyboard.
 \end{itemize}
 
 \section{Next Stage Features}
 \begin{itemize}
-\item[•] Traduce the software in other languages
-\item[•] Make a game
-\item[•] Allow competitions between users
+\item Traduce the software in other languages
+\item Develop a game
+\item Allow competitions between users
 \end{itemize}
 
 \section{Conclusion}
-The aim of this report is to covered all steps and to present all functionalities and choices we made. This project has in purpose to produce a simple but robust and complete computer software. The final product, as presented then, is fully working and totally match with our beginning ideas.  
+The aim of this report is to cover all steps and to present all functionalities and choices the group made. This project has in purpose to produce a simple but robust and complete computer software. The final product, as presented then, is fully working and totally match with the group beginning ideas.  
 
 \chapter{Computing Domain}
-As this project has in purpose to develop a software it was logic to use an adapted programming language for this. As we did C and Java in the first semester, we decide to use an other one in a way to learn or to improve our skills on an other language. That is why we choose C++.
+As this project has in purpose to develop a software it was logic to use an adapted programming language for this. As the group members did C and Java in the first semester, they decide to use an other one in a way to learn or to improve our skills on an other language. That is why the group chose C++.
 \\
-C++ is a general object-oriented programming language who provide facilities with low-level memory manipulation. It was well adapted for our project because as C++ is a language who need compilation, an executable is created and thereby can be used on user's computer to run the software. 
+C++ is a general object-oriented programming language who provide facilities with low-level memory manipulation. It was well adapted for our project because as C++ is a language who need to be compiled, an executable is created and thereby can be used on user's computer to run the software. 
 \\
-There is different framework (libraries) available with C++ like Gtkmm, SFML or Qt for example. We decided to use Qt because it was new for us and thus the project would gave us a way to learn how use it. Furthermore, Qt is well adapted for this kind of software and the Qt company provides a good IDE (Qt Creator), which is fully working with the Qt library. This IDE provide a GUI builder and a documentation of the library is directly include inside the IDE. 
+There are different frameworks (libraries) available with C++ like Gtkmm, SFML or Qt for example. The group decided to use Qt because it was new for them and thus the project would give them a way to learn how to use it. Furthermore, Qt is well adapted for this type of software and the Qt company provides a good IDE (Qt Creator), which is fully working with the Qt library. This IDE provides a GUI builder and a documentation of the library is directly included inside the IDE. 
 \\
-To build the design of the window's software, as said before, we used the GUI builder provided buy Qt Creator.
+To build the design of the window's software, as said before, the group used the GUI builder provided buy Qt Creator.
 
 \chapter{The project group}
-The group is composed of two students. As we both know that a gap of level was existing and to be able to get a good final product, we decide to try to find a way to split the work as equitably as possible keeping in mind our objectives and personal skills.
+The group is composed of two students. As they both know that a gap of level was existing and to be able to get a good final product, the group decide to try to find a way to split the work as equitably as possible keeping in mind their objectives and personal skills.
 \\
-Azarias is working faster and get more competence in C++ so he did more coding than Pierre. 
+Azarias was working faster and get more competence in C++ so he did more coding than Pierre. 
 \\
-C++ was newest for Pierre so he had to adapt and get more time to learn basics but he finally provide code. 
+C++ was newest for Pierre so he had to adapt and get more time to learn basics but he finally provided code. 
 \\
-Our report writing skills was pretty equals but as Pierre coded less he tried to spend more time as Azarias on this. 
+The report writing skills was pretty equals but as Pierre coded less he tried to spend more time as Azarias on this. 
 
 \chapter{Project deliverables}
 The deliverables as specified in the project handbook are:
 \begin{itemize}
-\item[•]A working prototype.
-\item[•]An oral presentation and defence of the project.
-\item[•]System prototype documentation.
-\item[•]Full software.
-\item[•]A detailed project report.
+\item A working prototype.
+\item An oral presentation and defence of the project.
+\item System prototype documentation.
+\item Full software.
+\item A detailed project report.
 \end{itemize}
 
 \chapter{Document outline}
-This report documentation present the entire project from the beginning with the research to the final software.
+This report documentation presents the entire project from the beginning with the research to the final software.
 All areas provided in this report are:
 \begin{itemize}
-\item[•]An introduction including a chapter containing a system prototype report, a chapter about the computing domain, a chapter about the project group, a chapter about project deliverables and an other with this document outline.
-\item[•]A complete literature review which cover the main research for the project. The different areas of research covered by this literature review are some historic researches related to the subject, different keyboard available on the market and typing ways.  
-\item[•]A system analysis part containing a chapter covering different aspect of the functional requirements. 
+\item An introduction including a chapter containing a system prototype report, a chapter about the computing domain, a chapter about the project group, a chapter about the project deliverables and another with this document outline.
+\item A complete literature review which cover the main research for the project. The different areas of research covered by this literature review are some historic researches related to the subject, different keyboard available on the market and typing ways.  
+\item A system analysis part containing a chapter covering different aspect of the functional requirements. 
 \end{itemize}
 
 \part{Literature review}
